Updated server.js, talent profiles, and verification pages

--- a/talent-profiles.html
+++ b/talent-profiles.html
@@ -27,8 +27,10 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="investors.html">Investors</a></li>
-                <li><a href="talent.html" class="active">Talent</a></li>
+                <li><a href="talent-profiles.html" class="active">Talent</a></li>
                 <li><a href="learn.html">Learn</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="dashboard.html" class="active">Dashboard</a></li>
             </ul>
         </nav>
         <div class="auth-buttons" id="auth-buttons">
